--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 280574ca9bd8
-	base = 2b832d46b128
+	base = 96aa6f364089
 	trim = ament_cmake
-	trimbase = 
+	trimbase = 2b832d46b128
