--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 280574ca9bd8
-	base = 2d2865f586cb
+	base = 79792453250d
 	trim = ament_cmake_auto
-	trimbase = 
+	trimbase = 2d2865f586cb
