--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 280574ca9bd8
-	base = 9697182eacbe
+	base = a9e02a7eb143
 	trim = ament_cmake_core
-	trimbase = 
+	trimbase = 9697182eacbe
