--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 280574ca9bd8
-	base = d8b04de3475c
+	base = 7595d1846d89
 	trim = ament_cmake_export_definitions
-	trimbase = 
+	trimbase = d8b04de3475c
