--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 280574ca9bd8
-	base = 687292649f83
+	base = 0c8a0409f564
 	trim = ament_cmake_export_dependencies
-	trimbase = 
+	trimbase = 687292649f83
