--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 85bc4fad76f9
 	base = 1053a9d61805
 	trim = ament_cmake_export_include_directories
-	trimbase = f4a4e1f77acc
+	trimbase = 
