--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 280574ca9bd8
-	base = 4bfb6f8427fa
+	base = f9d9956c1452
 	trim = ament_cmake_export_include_directories
-	trimbase = 
+	trimbase = 4bfb6f8427fa
