--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 280574ca9bd8
-	base = d0c2173fa042
+	base = 52483d6304ec
 	trim = ament_cmake_export_interfaces
-	trimbase = 
+	trimbase = d0c2173fa042
