--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 280574ca9bd8
-	base = bac52511f034
+	base = 0b04e659ddaf
 	trim = ament_cmake_export_libraries
-	trimbase = 
+	trimbase = bac52511f034
