--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 280574ca9bd8
-	base = dd828301b79c
+	base = 2914ae7aff20
 	trim = ament_cmake_export_link_flags
-	trimbase = 
+	trimbase = dd828301b79c
