--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 280574ca9bd8
-	base = 36aa4163170b
+	base = c8cf0ba0f205
 	trim = ament_cmake_export_targets
-	trimbase = 
+	trimbase = 36aa4163170b
