--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 280574ca9bd8
-	base = 02161153b081
+	base = 166623c134be
 	trim = ament_cmake_gen_version_h
-	trimbase = 
+	trimbase = 02161153b081
