--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 280574ca9bd8
-	base = 9fb46d17eb1c
+	base = 507636e6208d
 	trim = ament_cmake_gmock
-	trimbase = 
+	trimbase = 9fb46d17eb1c
