--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 280574ca9bd8
-	base = d77dd70c31fc
+	base = 2cc63e3db2c1
 	trim = ament_cmake_google_benchmark
-	trimbase = 
+	trimbase = d77dd70c31fc
