--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 280574ca9bd8
-	base = a4ed2b5c8ce3
+	base = 4aec60c2be26
 	trim = ament_cmake_gtest
-	trimbase = 
+	trimbase = a4ed2b5c8ce3
