--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 280574ca9bd8
-	base = c995e5f7feaf
+	base = b83a398135c9
 	trim = ament_cmake_include_directories
-	trimbase = 
+	trimbase = c995e5f7feaf
