--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 280574ca9bd8
-	base = b6a935eea988
+	base = 6f0822f13956
 	trim = ament_cmake_libraries
-	trimbase = 
+	trimbase = b6a935eea988
