--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 280574ca9bd8
-	base = b643d4376df8
+	base = 887ab391be88
 	trim = ament_cmake_pytest
-	trimbase = 
+	trimbase = b643d4376df8
