--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 280574ca9bd8
-	base = e3ed578d0aa4
+	base = c1acbcfc8c45
 	trim = ament_cmake_python
-	trimbase = 
+	trimbase = e3ed578d0aa4
