--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 280574ca9bd8
-	base = 322077be3fdb
+	base = 70982b3c1ede
 	trim = ament_cmake_target_dependencies
-	trimbase = 
+	trimbase = 322077be3fdb
