--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 280574ca9bd8
-	base = bfbecd6b19d6
+	base = 7bf2db1c1451
 	trim = ament_cmake_test
-	trimbase = 
+	trimbase = bfbecd6b19d6
