--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 280574ca9bd8
-	base = 06ebc7e0a068
+	base = 8f6cc25733be
 	trim = ament_cmake_vendor_package
-	trimbase = 
+	trimbase = 06ebc7e0a068
