--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 280574ca9bd8
-	base = 1957e0172e60
+	base = b9afc286bd21
 	trim = ament_cmake_version
-	trimbase = 
+	trimbase = 1957e0172e60
